# OpenShell

./: .gitignore  .image-garden.mk  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SNAP-README.md  build-craft.sh  build-everything.sh  dev-sandbox-policy.rego  dev-sandbox-policy.yaml  mise.toml  pyproject.toml  rockcraft-openshell-core.yaml  rockcraft-vm-rootfs.yaml  rockcraft.yaml  spread.yaml
.agent/skills/create-gitlab-mr/: SKILL.md
.github/workflows/: snap-build.yml
.image-garden/: .gitignore
architecture/: containers.md  sandbox.md
architecture/plans/opa/: plan.md
architecture/plans/sandbox-policy-refactor/: plan.md
crates/navigator-cli/: Cargo.toml
crates/navigator-cli/src/: lib.rs  main.rs  run.rs
crates/navigator-core/: build.rs
crates/navigator-core/src/: config.rs  error.rs  lib.rs
crates/navigator-core/src/proto/: mod.rs
crates/navigator-sandbox/: Cargo.toml
crates/navigator-sandbox/src/: lib.rs  main.rs  opa.rs  process.rs  proxy.rs
crates/navigator-server/: Cargo.toml
crates/navigator-server/src/: grpc.rs  http.rs  lib.rs  main.rs  multiplex.rs  tls.rs
crates/openshell-bootstrap/: Cargo.toml
crates/openshell-bootstrap/src/: apply.rs  docker.rs  k8s_init.rs  lib.rs  metadata.rs  pki.rs  reconcile.rs
crates/openshell-cli/: Cargo.toml
crates/openshell-cli/src/: completers.rs  doctor_llm_prompt.md  lib.rs  main.rs  run.rs  ssh.rs  tls.rs
crates/openshell-cli/src/commands/: mod.rs  podman.rs
crates/openshell-core/src/: config.rs  kvm.rs  lib.rs
crates/openshell-driver-kubernetes/src/: config.rs  driver.rs  main.rs
crates/openshell-driver-podman/src/: client.rs  container.rs  driver.rs  lib.rs
crates/openshell-driver-vm/src/: driver.rs  main.rs  runtime.rs
crates/openshell-server/src/: cli.rs  http.rs  lib.rs  multiplex.rs  ws_tunnel.rs
crates/openshell-server/src/compute/: mod.rs
crates/openshell-server/src/grpc/: sandbox.rs
crates/openshell-vm/scripts/: build-rootfs.sh  check-vm-capabilities.sh
crates/openshell-vm/src/: lib.rs
deploy/helm/openshell/: values.yaml
deploy/helm/openshell/templates/: apparmor-loader.yaml  statefulset.yaml
docker/: Dockerfile.factory  mise.toml
docs/: index.yml
docs/get-started/: install-snap.mdx
docs/sandboxes/: compute-drivers.mdx
proto/: compute_driver.proto  navigator.proto
python/navigator/: __init__.py  navigator_test.py
snap/: snapcraft.yaml
snap/hooks/: configure  install
snap/local-bin/: openshell-cli-wrapper  openshell-server-wrapper
tasks/: snap.toml
tasks/scripts/: build-rock.sh  build-snap.sh
tasks/scripts/vm/: build-rockcraft-rootfs.sh
tests/smoke/configure-driver/: task.yaml
tests/smoke/configure-registry/: task.yaml
tests/smoke/configure-socket-group/: task.yaml
tests/smoke/configure-socket-mode/: task.yaml
tests/smoke/hello/: task.yaml
tests/smoke/version/: task.yaml
tests/smoke/vm-agents/: task.yaml
